<resources>
    <string name="app_name">NutriFit</string>

    // bottom navigation
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_your_menu">Your Menu</string>

    // dashboard
    <string name="heading_home">Personal Data</string>
    <string name="desc_home">Enter your personal data to get recommendations for healthy foods for your diet</string>
    <string name="age">Enter your age</string>
    <string name="height">Enter your height (cm)</string>
    <string name="weight">Enter your weight (kg)</string>
    <string name="diet_target">Choose Your Diet Target</string>
    <string name="gender">Choose your gender</string>
    <string name="activity">Choose your Activity Level</string>
    <string name="btn_search">Get My Menu</string>
    <string name="heading_recommendation">Food Recommendation</string>
    <string name="desc_recommendation">Based on the personal data you entered, here are our food recommendations</string>

    <string-array name="target">
        <item>1 Kg</item>
        <item>2 Kg</item>
        <item>3 Kg</item>
        <item>4 Kg</item>
        <item>5 Kg</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="level">
        <item>InActive</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>

    // register and login
    <string name="register">Create Account</string>
    <string name="login">Login Page</string>

    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>

    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>

    <string name="error_field_username">Username is required</string>
    <string name="error_field_password">Password is required</string>
    <string name="error_field_cpassword">Confirm password doesn\'t match</string>
    <string name="error_field_min_length">Password must be at least 6 characters</string>

    <string name="have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    // your menu
    <string name="title_item_your_menu">Title Your Menu</string>
    <string name="desc_item_your_menu">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.</string>
    <string name="heading_your_menu">Food Recommendation</string>
    <string name="desc_your_menu">a collection of healthy food recommendation articles tailored to support your diet goals</string>
    <string name="category_your_menu">Category Menu</string>

    // profile
    <string name="label_name">Name</string>
    <string name="field_name">Enter your name</string>
    <string name="label_bio">Bio</string>
    <string name="field_bio">Enter your bio</string>
    <string name="label_email">Email</string>
    <string name="field_email">Enter your email</string>
    <string name="label_address">Address</string>
    <string name="field_address">Enter your address</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

</resources>