<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:padding="30dp">

        <TextView
            android:id="@+id/heading_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_home"
            android:textColor="@color/secondary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold" />

        <TextView
            android:id="@+id/desc_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="@string/desc_home"
            android:fontFamily="@font/poppins"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/field_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:hint="@string/gender"
                android:paddingVertical="12dp"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_target"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/field_target"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:hint="@string/target"
                android:paddingVertical="12dp"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:text="@string/btn_search"
            android:paddingVertical="12dp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="10dp"
            app:cornerRadius="30dp"/>
    </LinearLayout>

</ScrollView>