<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/bg__register"
    android:gravity="center"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/secondary"
            app:strokeWidth=".5dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/title_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/secondary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.example.nutrifit.ui.customView.EmailEditText
                        android:id="@+id/field_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:layout_marginTop="15dp">

                    <com.example.nutrifit.ui.customView.PasswordEditText
                        android:id="@+id/field_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins"
                    app:cornerRadius="30dp"
                    android:text="@string/btn_login"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/dont_have_account"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/register_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/btn_register"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

</LinearLayout>